--- a/blue-tick/src/components/style/Footer.css
+++ b/blue-tick/src/components/style/Footer.css
@@ -1,32 +1,82 @@
 /* Footer.css */
 
 .footer {
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .footer-links a {
-    padding-left: 50px 0;
-    padding-right: 50px 0;
-    margin: 0 10px;
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .footer-links img {
-    height: 25px; /* Adjust the height as needed */
-  }
-  
-  .footer p {
-    margin: 10px 0;
-  }
-  
-  .footer-icons a {
-    margin: 0 10px;
-  }
-  
-  .footer-icons img {
-    height: 20px; /* Adjust the height as needed */
-  }
+  padding: 40px 20px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+
+.Other-links {
+  display: flex;
+  flex-direction: column; /* Set flex direction to column */
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.Other-links h5 {
+  margin-bottom: 1px;
+  margin-top: 1px;
+}
+
+.Other-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.Other-links ul li {
+  margin: 8px 0;
+}
+
+.Other-links ul li a {
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.3s ease;
+  display: block;
+  padding: 20px;
+}
+
+.Other-links ul li a:hover {
+  color: #007bff;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.footer-links a {
+  margin: 0 15px;
+}
+
+.footer-links img {
+  height: 25px;
+}
+
+.footer p {
+  margin: 10px 0;
+}
+
+.footer-icons {
+  margin-top: 20px;
+}
+
+.footer-icons ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-icons li {
+  margin: 0 10px;
+}
+
+.footer-icons img {
+  height: 20px;
+}
